Compositor Disabled Node Config -> SegFault #67358
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
12 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#67358
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-4.15.0-50-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.104
Blender Version
Broken: version: Release Candidate 1 of 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash:
06312c6d2d
Edit: I have reproduced this in RC2
Short description of error
A disabled Separate HSV node followed by a disabled Combine HSV node followed by another node causes a crash during editing and compositing. Dropping the glare node in between the combine HSV and the outputs triggers the crash. Rendering a similar scene also triggers a crash.
Edit: Reproducible with RGB node equivalents too
Exact steps for others to reproduce the error from scratch
Exact steps for others to reproduce the error from file
Added subscriber: @finnb
#78099 was marked as duplicate of this issue
Added subscriber: @capnm
Only happens here if you leave the second
Render Result
window openbacktrace
Added subscribers: @Jeroen-Bakker, @brecht
@Jeroen-Bakker is the maintainer of the compositor.
Added subscriber: @ZedDB
When I close the separate render window before I drag and drop the glare node it won't fail. @ZedDB can you confirm this?
I can confirm your findings @jbakker.
Added subscriber: @georgK
Still present in 2.82 (sub 2), branch: master, commit date: 2019-11-27 20:26, hash:
4659fa5471
Also happens with active backdrop (closed render window).
Added subscriber: @iss
Changed status from 'Confirmed' to: 'Needs User Info'
I have re-triaged this report and can not reproduce it.
Can you please check if this is still an issue in latest build?
https://builder.blender.org/download/
Added subscriber: @lichtwerk
Changed status from 'Needs User Info' to: 'Confirmed'
Can still confirm if the Render Result is shown anywhere (doesnt have to be a separate window, you can also change the 3DView to an image Editor with the Render Result showing)
Added subscriber: @dfelinto
Confirmed reports should always be tagged to a module, otherwise they don't show up in the queries and workboards.
Added subscriber: @Sergey
@Jeroen-Bakker, there is something wrong is going on with data conversions when there are are two adjacent proxies with different types on their sockets. You can see this from graphviz debug output (you'd have to make it stored in a CWD rather than in temp directory since temp directory is deleted on crash).
The simplest solution which seems to work is to resolve proxies first, and then add data type conversion nodes: P1459: Snippet for #67358
Not yet sure if it's a fix of a symptom (and there are some deeper wrong logic), or is it something proper to do (It kind of makes sense to not bother with conversion nodes if the node will be deleted anyway).
When a node is muted it is replaced by a proxy
add_proxies_mute
resolve_proxies
isn't dependent to theadd_datatype_conversions
so logically the proposed fix doesn't harm.resolve_proxies
removes connected proxies that might hide the issue. But agree that this points to a deeper issue.Functional it makes sense to do resolving before data conversions as the conversion is part of the node that is proxied. So it looks ok to commit. In future implementation I would expect the proxies to go away and and replaced by the generic node system evaluation we have.
This issue was referenced by
020b8e2c73
This issue was referenced by
16d09a5864
Changed status from 'Confirmed' to: 'Resolved'
Added subscribers: @SachaGoedegebure, @Alaska
Removed subscriber: @Alaska